clang/test/BSC/Negative/OwnedStruct/destructor/destructor_this_param.cbs
// RUN: %clang_cc1 -verify %s

owned struct A;
int f(A this);
owned struct A {  
  ~A(A this){
    f(this); // expected-error {{'this' cannot be moved in destructor}}
  }
};                       
int f(A this){ A a = this ;return 1;} 
                  
owned struct B {  
  public:
  ~B(B this){
    B a = this; // expected-error {{'this' cannot be moved in destructor}}
  }
};  
    